Jetty/Orbit and permgen space for sbt-runmode tests